Add comments counter in tasks controller
